# template_empty_cpp

./: .clang-format  .clang-tidy  .clangd  .gitignore  .markdownlint.yaml  CMakeLists.txt  CMakePresets.json  README.md  _typos.toml  compile_flags.txt  conanfile.py  pixi.toml  structure.md  typos.toml
.zed/: debug.json  memo.md  settings.json  tasks.json
cmake/: collect-conan-licenses.cmake  collect-fetchcontent-licenses.cmake  coverage-flags.cmake  coverage.cmake  custom-targets.cmake  dependencies-app.cmake  dependencies-test.cmake  local-or-fetch.cmake  quality-setup.cmake  quality-tools.cmake  sanitizer-flags.cmake
context/: _envrc  mise.toml
include/myproject/core/: core.hpp
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  core.cpp
src/sub/: CMakeLists.txt  sub.cpp
tests/: .clang-tidy  CMakeLists.txt  test_core.cpp
tests/cpp/: .clang-tidy  CMakeLists.txt  test_sub.cpp
